<resources>
    <string name="app_name">VedicClock</string>
    <string name="splash_screen_banner">Swamiye Saranam Ayyappa</string>
    <string name="gkm_copyright">© GKM Heritage Creations, 2023</string>
    <string name="nazhigai_text">Na</string>
    <string name="vinaadi_text">Vi</string>
    <string name="nazhigai_vinaadi_text">Na.Vi</string>
    <string name="enter_field_value">Enter Value (as per Ujjain Timings):</string>
    <string name="sunrise_timings">Sunrise Timings (of desired location): </string>
    <string name="calculated_field_value">Calculated Value (Na. Vi) format:</string>
    <string name="calculated_hhmm_value">Calculated Value (HH:MM) format: </string>
    <string name="hh_mm_text">HH:MM</string>
    <string name="hour_text">HH</string>
    <string name="minute_text">MM</string>
    <string name="vedic_clock_main_header_text">Vedic Calculator</string>
    <string name="inputs_text">Inputs</string>
    <string name="vedic_clock_calculations">Calculations (After Desanthra Samaskaaram)</string>
    <string name="calculate_button_text">Calculate!</string>
    <string name="vedic_clock_calculator"><![CDATA[Vedic Clock & Calculator]]></string>
</resources>