<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background"
    android:fillViewport="true"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/vedic_clock_main_header_text"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textAlignment="center"
        android:maxLines="5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:fillViewport="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/input_text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:minHeight="48dp"
            android:gravity="center_vertical|start"
            android:text="@string/inputs_text"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="textStart" />

        <LinearLayout
            android:id="@+id/nazhigai_vinaadi_layout"
            android:layout_below="@id/input_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:minHeight="48dp"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_weight="7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:gravity="center_vertical|start"
                android:text="@string/enter_field_value"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/naTimeVal"
                android:hint="@string/nazhigai_text"
                android:labelFor="@string/nazhigai_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:maxLength="2"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:gravity="center_vertical|center_horizontal"
                android:autofillHints="creditCardNumber"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="."
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/viTimeVal"
                android:hint="@string/vinaadi_text"
                android:labelFor="@string/vinaadi_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:maxLength="2"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:gravity="center_vertical|center_horizontal"
                android:autofillHints="creditCardNumber"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/nazhigai_vinaadi_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:minHeight="48dp"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_weight="7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:gravity="center_vertical|start"
                android:text="@string/sunrise_timings"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/hourVal"
                android:hint="@string/hour_text"
                android:labelFor="@string/hour_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:maxLength="2"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:gravity="center_vertical|center_horizontal"
                android:autofillHints="creditCardNumber"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:gravity="center_horizontal|center_vertical"
                android:text=":"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/minuteVal"
                android:hint="@string/minute_text"
                android:labelFor="@string/minute_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:maxLength="2"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:gravity="center_vertical|center_horizontal"
                android:autofillHints="creditCardNumber"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/calculate_button"
        android:backgroundTint="@color/lightcyan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:drawablePadding="6dp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_vertical|center_horizontal"
        android:minHeight="60dp"
        android:padding="20dp"
        android:text="@string/calculate_button_text"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <RelativeLayout
        android:id="@+id/calc_layout"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:fillViewport="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/calc_text_layout"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:minHeight="48dp"
            android:gravity="center_vertical|start"
            android:text="@string/vedic_clock_calculations"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="textStart" />

        <LinearLayout
            android:id="@+id/nazhigai_vinaadi_calc_layout"
            android:layout_below="@id/calc_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:minHeight="48dp"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_weight="7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:gravity="center_vertical|start"
                android:text="@string/calculated_field_value"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/calculated_nazhigai_vinaadi_value"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:gravity="center_vertical|end"
                android:text="@string/nazhigai_vinaadi_text"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textAlignment="textEnd" />

        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/nazhigai_vinaadi_calc_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:minHeight="48dp"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_weight="7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:gravity="center_vertical|start"
                android:text="@string/calculated_hhmm_value"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/calculated_hh_mm_value"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:gravity="center_vertical|end"
                android:text="@string/hh_mm_text"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textAlignment="textEnd" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>